took out token file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mvc-blog",
+  "name": "darcy-blog",
   "version": "1.0.0",
   "description": "As we now complete our MVC conversation, we can refactor our app to use good MVC separation of concerns.",
   "main": "server.js",
